changement link to css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           href="https://fonts.googleapis.com/css?family=Tangerine">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="C:\Users\wilso\Desktop\devoirM3\CSS\agmt_responsive.css">
+	<link rel="stylesheet" type="text/css" href="CSS\agmt_responsive.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	<title> Assignement Module 3</title>
